# modern-python-template

./: .travis.yml  Makefile  README.md  cookiecutter.json  setup.cfg
.github/workflows/: python-build.yml  python-package.yml
docs/: conf.py
example_python_project/: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
example_python_project/.github/workflows/: python-build.yml  python-publish.yml
example_python_project/docsrc/: conf.py
example_python_project/example_python_project/: __init__.py  about.py  about_.py  about_test.py  config.py  config_test.py  future.py
gecrooks-python-template/: __init__.py  about.py  config.py
gecrooks_python_template/: __init__.py  about.py  config.py  config_test.py
hooks/: post_gen_project.py  pre_gen_project.py
python_mvp/: __init__.py  about.py  config.py  config_test.py
{{cookiecutter.module_name}}/: .editorconfig  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
{{cookiecutter.module_name}}/.github/workflows/: python-build.yml  python-publish.yml
{{cookiecutter.module_name}}/docsrc/: conf.py
{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/: __init__.py  about.py  about_.py  about_test.py  config.py  config_test.py  future.py
