# Setup Configuration File
# https://docs.python.org/3/distutils/configfile.html
# [INI](https://docs.python.org/3/install/index.html#inst-config-syntax) file format.

[metadata]
name = gecrooks_python_template
url = https://github.com/gecrooks/gecrooks-python-template/
author = Gavin Crooks
author_email = gavincrooks@gmail.com
description = "Minimal Viable Product for an open source, github hosted, python package"
long_description = file:README.md
long_description_content_type = text/markdown
license_file = LICENSE
license = Apache-2.0

classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering
    Programming Language :: Python
    Natural Language :: English
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7    
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent


[options]
zip_safe = True
python_requires = >= 3.7

# importlib_metadata required for python 3.7
install_requires =
    importlib_metadata
    numpy

setup_requires =
  setuptools_scm

[options.extras_require]
dev =
    pytest >= 4.6
    pytest-cov
    flake8
    mypy
    black
    isort
    sphinx
    sphinxcontrib-bibtex
    setuptools_scm


# pytest configuration
[tool:pytest]
testpaths =
    gecrooks_python_template


# Configuration for test coverage
#
# https://coverage.readthedocs.io/en/latest/config.html
# > python -m pytest --cov
# Use ``# pragma: no cover`` to exclude specific lines

[coverage:paths]
source =
    gecrooks_python_template

[coverage:run]
omit =
    *_test.py

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    except ImportError
    assert False
    raise NotImplementedError()


# flake8 linter configuration
[flake8]
max-line-length = 88
ignore = E203, W503


# mypy typecheck configuration
#
# https://mypy.readthedocs.io/en/stable/config_file.html

[mypy]
files = gecrooks_python_template

# Suppresses error about unresolved imports (i.e. from numpy)
ignore_missing_imports = True

# Disallows functions without type annotations
disallow_untyped_defs = True

# Disable strict optional checks (Was default prior to mypy 0.600)
strict_optional = False
