# Project cut from gecrooks_python_template
# 

# Setup Configuration File
# https://docs.python.org/3/distutils/configfile.html
# [INI](https://docs.python.org/3/install/index.html#inst-config-syntax) file format.


[metadata]
# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# https://packaging.python.org/specifications/core-metadata/
# https://www.python.org/dev/peps/pep-0639/
# SPDX license short-form identifier, https://spdx.org/licenses/
# https://pypi.org/classifiers/
# setuptools v53.1.0 no longer recognizes capitalized keys, e.g. "Name" must be "name".

name = {{cookiecutter.module_name}}
summary = {{cookiecutter.short_description}}
long_description = file:README.md
long_description_content_type = text/markdown
keywords = python
url = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.module_name}}/
author = {{cookiecutter.author_name}}
author_email = {{cookiecutter.author_email}}
license = {{cookiecutter.license}}
license_file = LICENSE
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python
    Natural Language :: English
    Operating System :: OS Independent    
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed


[options]
zip_safe = True
python_requires = >= 3.8
packages = find:

install_requires =
    numpy >= 1.20    # v1.20 introduces typechecking for numpy

setup_requires =
  setuptools_scm


[options.extras_require]
dev =
    setuptools_scm
    pytest >= 4.6
    pytest-cov
    flake8
    mypy
    black
    isort
    sphinx



# pytest configuration
[tool:pytest]
testpaths =
    {{cookiecutter.module_name}}



# Configuration for test coverage
#
# https://coverage.readthedocs.io/en/latest/config.html
# > python -m pytest --cov
# Use ``# pragma: no cover`` to exclude specific lines

[coverage:paths]
source =
    {{cookiecutter.module_name}}

[coverage:run]
omit =
    *_test.py

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    except ImportError
    assert False
    raise NotImplementedError()
    pass



# Make isort compatible with black
[isort]
profile = black



# flake8 linter configuration
[flake8]
max-line-length = 88
ignore = E203, W503



# mypy typecheck configuration
# https://mypy.readthedocs.io/en/stable/config_file.html
[mypy]
files = {{cookiecutter.module_name}}

# Suppresses error about unresolved imports (i.e. from numpy)
ignore_missing_imports = True

# Disallows functions without type annotations
disallow_untyped_defs = True

# Disable strict optional checks (Was default prior to mypy 0.600)
strict_optional = False
